--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,21 +1,24 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{title}}</title>
     <script src="/js/htmx.min.js"></script>
-    <link href="/output.css" rel="stylesheet">
-</head>
-<body class="min-h-screen bg-gray-100">
+    <link href="/output.css" rel="stylesheet" />
+  </head>
+  <body class="min-h-screen bg-gray-100">
     <nav class="bg-blue-600 text-white p-4">
-        <div class="container mx-auto">
-            <h1 class="text-2xl font-bold"><a href="/">Pastebin</a></h1>
-        </div>
+      <div class="container mx-auto">
+        <h1 class="text-2xl font-bold"><a
+            href="/"
+            hx-target="main"
+            hx-get="/"
+          >Pastebin</a></h1>
+      </div>
     </nav>
 
     <main class="container mx-auto p-8 mx-auto max-w-5xl" id="main">
-        {{{body}}}
+      {{{body}}}
     </main>
-</body>
+  </body>
 </html>
