--- a/src/views/paste.handlebars
+++ b/src/views/paste.handlebars
@@ -1,6 +1,10 @@
 <h2 class="text-3xl font-bold text-gray-800 mb-4">{{paste.title}}</h2>
-<pre class="bg-gray-100 rounded p-4 text-gray-800 mb-6 whitespace-pre-wrap">{{paste.body}}</pre>
+<pre
+  class="bg-gray-100 rounded p-4 text-gray-800 mb-6 whitespace-pre-wrap"
+>{{paste.body}}</pre>
 <div class="flex flex-col gap-2 text-sm text-gray-600">
-    <div><span class="font-semibold">ID:</span> <span class="font-mono">{{paste.id}}</span></div>
-    <div><span class="font-semibold">Created At:</span> <span class="font-mono">{{formatRFC3339 paste.createdAt}}</span></div>
+  <div><span class="font-semibold">ID:</span>
+    <span class="font-mono">{{paste.id}}</span></div>
+  <div><span class="font-semibold">Created At:</span>
+    <span class="font-mono">{{formatRFC3339 paste.createdAt}}</span></div>
 </div>
